new-booking-stage-1 FINISHED. User cannot make an appointment with wrong hours. Create JSON for next page. And other stuff I do not remember
TODO. Link to next booking and toastr to work.
JSON String is in <div hidde> <p id="JSONtoSend"></p></div>

Comments added.

--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -143,7 +143,9 @@
         </div>
     </div>
 </div>
-
+<div hidden>
+    <p id="JSONtoSend"></p>
+</div>
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
 <script src="/js/new-booking-stage-1.js"></script>
