--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -143,9 +143,9 @@
 		</div>
 	</div>
 </div>
-<div hidden>
-	<p id="JSONtoSend"></p>
-</div>
+<form action="/new-booking-2" method="post" class="submission-form">
+	<input type="hidden" id="jsonToSend" name="jsonFromStage1"/>
+</form>
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
 <script src="/js/new-booking-stage-1.js"></script>
