Added booking sections to 3rd stage of booking

--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -60,6 +60,7 @@
 
 	<input type="hidden" name="patient" value="#patient-id"/>
 	<input type="hidden" name="therapy" value="#therapy-id"/>
+	<input type="hidden" name="booking-sections" value="#HTMLOKAY:booking-sections-json"/>
 	<input type="hidden" name="default-tracer" value="#default-tracer-id"/>
 	<input type="hidden" name="assigned-staff" value="0"/>
 
