Renamed "appointments" to "bookings"

--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -99,8 +99,8 @@
 			</div>
 		</div>
 		<br/>
-		<button style="margin-top: 15px;" class="btn btn-primary" id="view-available-appointments">View Available
-			Appointments
+		<button style="margin-top: 15px;" class="btn btn-primary" id="view-available-bookings">
+			View Available Bookings Slots
 		</button>
 	</div>
 
