Date selector converted to more expandable plugin

--- a/src/main/resources/static/patient-details.html
+++ b/src/main/resources/static/patient-details.html
@@ -111,8 +111,8 @@
 
 ##patient-edit-modal.html
 
+<script src="/js/plugins/date-time-selector/date-selector.js"></script>
 <script src="/js/patients.js"></script>
-<script src="/js/date-selector.js"></script>
 
 ##_loading-modal.html
 
