--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -57,7 +57,7 @@
 ##patient-edit-modal.html
 
 <script src="/js/patients.js"></script>
-<script src="/js/date-selector.js"></script>
+<script src="/js/plugins/date-time-selector/date-selector.js"></script>
 
 #[def: entity-name-title = Patient]
 #[def: entity-name-body = patient]
