--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -126,22 +126,8 @@
 		</div>
 		<div class="col-md-5 col-lg-5">
 			<div class="tracer-order-wrapper">
-				<div class="col-sm-4" style="padding-left: 0;">
-					<select class="form-control" name="date-selector-year" id="date-selector-year">
-						<option value="" disabled selected>Year</option>
-					</select>
-				</div>
-				<div class="col-sm-5">
-					<select class="form-control" name="date-selector-month" id="date-selector-month" disabled>
-						<option value="" disabled selected>Month</option>
-					</select>
-				</div>
-				<div class="col-sm-3">
-					<select class="form-control" name="date-selector-day" id="date-selector-day" disabled>
-						<option value="">Day</option>
-					</select>
-				</div>
-				<input type="hidden" name="tracer-order-due" value="#tracer-order-due" id="date-selector-output"/>
+				<div class="date-selector" style="margin:0; padding:0;" data-sequence="1"></div>
+				<input type="hidden" name="tracer-order-due" class="date-selector-output" value="#tracer-order-due" data-sequence="1"/>
 				<br style="clear: both"/>
 			</div>
 			<p class="help-block label-for-no-tracer-order">
@@ -172,7 +158,8 @@
 
 				#[/collection]
 			</select>
-			<p class="help-block"><a href="javascript:;" class="add-staff-member"><span class="fa fa-plus"></span> Add</a></p>
+			<p class="help-block">
+				<a href="javascript:;" class="add-staff-member"><span class="fa fa-plus"></span> Add</a></p>
 			<p class="help-block assigned-staff"></p>
 		</div>
 	</div>
@@ -185,7 +172,7 @@
 
 </form>
 
-<script src="/js/date-selector.js"></script>
+<script src="/js/plugins/date-time-selector/date-selector.js"></script>
 <script src="/js/new-booking-stage-2.js"></script>
 
 ##_footer.html
