DERP - future/past dates working now

--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -78,7 +78,7 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label">From</label>
 						<div class="col-sm-9">
-							<div class="date-selector" style="margin:0; padding:0;" data-sequence="1"></div>
+							<div class="date-selector" style="margin:0; padding:0;" data-sequence="1" data-mode="future"></div>
 							<input type="hidden" name="from-date" class="date-selector-output" data-sequence="1"/>
 						</div>
 					</div>
@@ -95,7 +95,7 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label">To</label>
 						<div class="col-sm-9">
-							<div class="date-selector" style="margin:0; padding:0;" data-sequence="2"></div>
+							<div class="date-selector" style="margin:0; padding:0;" data-sequence="2" data-mode="future"></div>
 							<input type="hidden" name="to-date" class="date-selector-output" data-sequence="2"/>
 						</div>
 					</div>
