Pretty forms on staff availability

--- a/src/main/resources/static/staff-absences.html
+++ b/src/main/resources/static/staff-absences.html
@@ -5,8 +5,7 @@
 ##_header.html
 
 <div class="row">
-	<div class="col-lg-12 col-md-12">
-		<!-- TODO: Put me in a nice information call out box -->
+	<div class="col-lg-12 col-md-12 alert alert-info">
 		<p><em>Editing staff absences for <strong>#staff-name</strong>.</em></p>
 	</div>
 </div>
