--- a/src/main/resources/static/staff-availabilities.html
+++ b/src/main/resources/static/staff-availabilities.html
@@ -5,8 +5,7 @@
 ##_header.html
 
 <div class="row">
-	<div class="col-lg-12 col-md-12">
-		<!-- TODO: Put me in a nice information call out box -->
+	<div class="col-lg-12 col-md-12 alert alert-info">
 		<p><em>Editing default availabilities for <strong>#staff-name</strong>.</em></p>
 	</div>
 </div>
@@ -78,7 +77,7 @@
 					<div class="form-group">
 						<label for="day-of-week" class="col-sm-3 control-label">Day of the Week</label>
 						<div class="col-sm-9">
-							<select name="day-of-week" id="day-of-week">
+							<select name="day-of-week" id="day-of-week" class="form-control">
 								<option value="1">Monday</option>
 								<option value="2">Tuesday</option>
 								<option value="3">Wednesday</option>
@@ -87,21 +86,25 @@
 								<option value="6">Saturday</option>
 								<option value="7">Sunday</option>
 							</select>
-							<p class="help-block">Example block-level help text here.</p>
+							<p class="help-block">What day is this staff member available on?</p>
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="start-time" class="col-sm-3 control-label">Start Time</label>
+						<label class="col-sm-3 control-label">Start Time</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="text" name="start-time" id="start-time"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<div class="time-selector" style="margin:0; padding:0;" data-sequence="1"></div>
+							<input type="hidden" name="start-time" class="time-selector-output" data-sequence="1" data-default="00:00"/>
+							<br style="clear: both"/>
+							<p class="help-block">Leave time blank for 'all day'.</p>
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="end-time" class="col-sm-3 control-label">End Time</label>
+						<label class="col-sm-3 control-label">End Time</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="text" name="end-time" id="end-time"/>
-							<p class="help-block">Example block-level help text here.</p>
+							<div class="time-selector" style="margin:0; padding:0;" data-sequence="2"></div>
+							<input type="hidden" name="end-time" class="time-selector-output" data-sequence="2" data-default="23:59"/>
+							<br style="clear: both"/>
+							<p class="help-block">Leave time blank for 'all day'.</p>
 						</div>
 					</div>
 				</form>
@@ -114,6 +117,7 @@
 	</div>
 </div>
 
+<script src="/js/plugins/date-time-selector/time-selector.js"></script>
 <script src="/js/staff-availabilities.js"></script>
 
 #[def: entity-name-title = Staff Availability]
