--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -116,31 +116,18 @@
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
 					<div class="form-group">
-						<label for="booking-start-hours" class="col-sm-3 control-label">Starts at :</label>
-						<div class="col-sm-2">
-							<select class="form-control" name="booking-start-hours" id="booking-start-hours">
-							</select>
-							<p class="help-block text-center">Hours</p>
+						<label class="col-sm-3 control-label">Starts:</label>
+						<div class="col-sm-9">
+							<div class="time-selector" style="margin:0; padding:0;" data-sequence="1"></div>
+							<input type="hidden" name="start-time" class="time-selector-output" data-sequence="1"/>
 						</div>
-                        <div class="col-sm-2">
-                            <select class="form-control" name="booking-start-minutes" id="booking-start-minutes">
-                            </select>
-                            <p class="help-block text-center">Minutes</p>
-                        </div>
 					</div>
 					<div class="form-group">
-						<label for="booking-end-hours" class="col-sm-3 control-label">Ends at :</label>
-						<div class="col-sm-2">
-							<select class="form-control" name="booking-end-hours" id="booking-end-hours">
-							</select>
-
-							<p class="help-block text-center">Hours</p>
+						<label class="col-sm-3 control-label">Ends:</label>
+						<div class="col-sm-9">
+							<div class="time-selector" style="margin:0; padding:0;" data-sequence="2"></div>
+							<input type="hidden" name="end-time" class="time-selector-output" data-sequence="2"/>
 						</div>
-                        <div class="col-sm-2">
-                            <select class="form-control" name="booking-end-minutes" id="booking-end-minutes">
-                            </select>
-                            <p class="help-block text-center">Minutes</p>
-                        </div>
 					</div>
 				</form>
 			</div>
@@ -156,6 +143,8 @@
 </form>
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
+<script src="/js/plugins/date-time-selector/time-selector.js"></script>
+<script src="/js/calendar.js"></script>
 <script src="/js/new-booking-stage-1.js"></script>
 
 ##_footer.html
