--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -19,6 +19,7 @@
 		<link href="/css/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css"/>
 		#[if: calendar]
 		<link href="/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
+		<link href="/css/calendar-tweaks.css" rel="stylesheet" type="text/css"/>
 		#[/if]
 		#[if: current-page = new-booking]
 		<link href="/css/new-booking-stage-1.css" rel="stylesheet" type="text/css"/>
