Dashboard tracer order fix

--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -88,7 +88,7 @@
 					#[each]
 					<a href="/tracer-order-details/#tracer-order-id" class="list-group-item">
 						<i class="fa fa-fw fa-flask"></i> #tracer-name, #tracer-dose
-						<span class="label label-default label-as-badge pull-right">due #days-until</span>
+						<span class="label label-default label-as-badge pull-right">order #days-until</span>
 					</a>
 					#[/each]
 
