Login fields disabled after click

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -61,7 +61,7 @@
 					#[/if]
 
 					<div class="login-button">
-						<button type="submit" class="btn btn-success">
+						<button type="submit" class="btn btn-success button-loading">
 							#[!if: stage = 2]
 							Continue
 							#[/!if]
