Added "cancelled" and "rebooked" booking statuses

--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -81,6 +81,8 @@
 	<div class="col-md-8 col-lg-8">
 		<button class="btn confirm-button link-button" data-id="#id" data-target="/booking-details/#booking-id/confirmed"><i class="fa fa-check-circle"></i> Confirmed</button>
 		<button class="btn edit-button link-button" data-id="#id" data-target="/booking-details/#booking-id/unconfirmed"><i class="fa fa-minus-circle"></i> Unconfirmed</button>
+		<button class="btn delete-button link-button" data-id="#id" data-target="/booking-details/#booking-id/cancelled"><i class="fa fa-times-circle"></i> Cancelled</button>
+		<button class="btn info-button link-button" data-id="#id" data-target="/booking-details/#booking-id/rebooked"><i class="fa fa-refresh"></i> Re-booked</button>
 	</div>
 </div>
 #[/ifperm]
