--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -99,8 +99,8 @@
 			</div>
 		</div>
 		<br/>
-		<button style="margin-top: 15px;" class="btn btn-primary" id="view-available-appointments">View Available
-			Appointments
+		<button style="margin-top: 15px;" class="btn btn-primary" id="view-available-bookings">
+			View Available Bookings Slots
 		</button>
 	</div>
 
@@ -116,23 +116,31 @@
 			<div class="modal-body">
 				<form class="form-horizontal edit-form">
 					<div class="form-group">
-						<label for="booking-start-time" class="col-sm-3 control-label">Starts at :</label>
-
-						<div class="col-sm-4">
-							<select class="form-control" name="booking-start-time" id="booking-start-time">
+						<label for="booking-start-hours" class="col-sm-3 control-label">Starts at :</label>
+						<div class="col-sm-2">
+							<select class="form-control" name="booking-start-hours" id="booking-start-hours">
 							</select>
-							<p class="help-block">Booking hour to start.</p>
+							<p class="help-block text-center">Hours</p>
 						</div>
+                        <div class="col-sm-2">
+                            <select class="form-control" name="booking-start-minutes" id="booking-start-minutes">
+                            </select>
+                            <p class="help-block text-center">Minutes</p>
+                        </div>
 					</div>
 					<div class="form-group">
-						<label for="booking-end-time" class="col-sm-3 control-label">Ends at :</label>
-
-						<div class="col-sm-4">
-							<select class="form-control" name="booking-end-time" id="booking-end-time">
+						<label for="booking-end-hours" class="col-sm-3 control-label">Ends at :</label>
+						<div class="col-sm-2">
+							<select class="form-control" name="booking-end-hours" id="booking-end-hours">
 							</select>
 
-							<p class="help-block">Booking hour to end.</p>
+							<p class="help-block text-center">Hours</p>
 						</div>
+                        <div class="col-sm-2">
+                            <select class="form-control" name="booking-end-minutes" id="booking-end-minutes">
+                            </select>
+                            <p class="help-block text-center">Minutes</p>
+                        </div>
 					</div>
 				</form>
 			</div>
