--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -6,12 +6,14 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-		#[ifperm: EDIT_PATIENTS]
 		<div class="text-right">
+			#[ifperm: EDIT_PATIENTS]
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Patient
 			</button>
+			#[/!ifperm]
+			<a class="btn btn-default top-button" href="/export/patients.csv" target="_blank"><i class="fa fa-download"></i>&nbsp;&nbsp;Export Patients
+			</a>
 		</div>
-		#[/!ifperm]
 		<table class=" table table-bordered table-hover" id="patients-table">
 			<thead>
 				<tr>
