--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -65,6 +65,15 @@
 </div>
 
 <div class="row">
+    <div class="col-md-4 col-lg-4 text-right">
+        <p><strong>Assigned Staff:</strong></p>
+    </div>
+    <div class="col-md-8 col-lg-8">
+        <p>#staff-name</p>
+    </div>
+</div>
+
+<div class="row">
 	<div class="col-md-4 col-lg-4 text-right">
 		<p><strong>Notes:</strong></p>
 	</div>
