Change <a> to <button>

--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -11,8 +11,8 @@
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Patient
 			</button>
 			#[/!ifperm]
-			<a class="btn btn-default top-button" href="/export/patients.csv" target="_blank"><i class="fa fa-download"></i>&nbsp;&nbsp;Export Patients
-			</a>
+			<button class="btn btn-default top-button link-button" data-target="/export/patients.csv"><i class="fa fa-download"></i>&nbsp;&nbsp;Export Patients
+			</button>
 		</div>
 		<table class=" table table-bordered table-hover" id="patients-table">
 			<thead>
