Everything up to date

--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -66,7 +66,7 @@
 
 <div class="row">
     <div class="col-md-4 col-lg-4 text-right">
-        <p><strong>Assigned Staff:</strong></p>
+        <p><strong>Staff:</strong></p>
     </div>
     <div class="col-md-8 col-lg-8">
         <p>#staff-name</p>
