moar code on DaySummaryRoute, mostly

--- a/src/main/resources/static/day-summary.html
+++ b/src/main/resources/static/day-summary.html
@@ -9,6 +9,16 @@
         Bookings
     </h2>
 </div>
+<div class="col-lg-12">
+    <h2 class="page-header">
+        Tracers
+    </h2>
+</div>
+<div class="col-lg-12">
+    <h2 class="page-header">
+        Absences
+    </h2>
+</div>
 
 
 </body>
