Updated patient CRUD

--- a/src/main/resources/static/patient-edit-modal.html
+++ b/src/main/resources/static/patient-edit-modal.html
@@ -24,6 +24,23 @@
 						</div>
 					</div>
 					<div class="form-group">
+						<label for="nhs-number" class="col-sm-3 control-label">NHS Number</label>
+						<div class="col-sm-9">
+							<input class="form-control" type="text" name="nhs-number" id="nhs-number"/>
+							<p class="help-block">Enter the patient's NHS number.</p>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="sex" class="col-sm-3 control-label">Sex</label>
+						<div class="col-sm-9">
+							<select class="form-control" name="sex" id="sex">
+								<option value="Male">Male</option>
+								<option value="Female">Female</option>
+							</select>
+							<p class="help-block">Select the patient's sex.</p>
+						</div>
+					</div>
+					<div class="form-group">
 						<label class="col-sm-3 control-label">Date of Birth</label>
 						<div class="col-sm-9">
 							<div class="date-selector" style="margin:0; padding:0;" data-sequence="1"></div>
