--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -19,6 +19,8 @@
 				<tr>
 					<th class="text-center">Patient Name</th>
 					<th class="text-center">Hospital Number</th>
+					<th class="text-center">NHS Number</th>
+					<th class="text-center">Sex</th>
 					<th class="text-center">Date of birth</th>
 					<th class="text-center">Action</th>
 				</tr>
@@ -32,6 +34,8 @@
 				<tr>
 					<td>#name</td>
 					<td>#hospital-number</td>
+					<td>#nhs-number</td>
+					<td>#sex-code</td>
 					<td>#date-of-birth</td>
 					<td>
 						#[ifperm: EDIT_PATIENTS]
