Added NHS number and sex to patient details

--- a/src/main/resources/static/patient-details.html
+++ b/src/main/resources/static/patient-details.html
@@ -40,10 +40,28 @@
 
 <div class="row">
 	<div class="col-md-4 col-lg-4 text-right">
+		<p><strong>NHS Number:</strong></p>
+	</div>
+	<div class="col-md-8 col-lg-8">
+		<p>#nhs-number</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
 		<p><strong>Date of Birth:</strong></p>
 	</div>
 	<div class="col-md-8 col-lg-8">
 		<p>#date-of-birth</p>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-4 col-lg-4 text-right">
+		<p><strong>Sex:</strong></p>
+	</div>
+	<div class="col-md-8 col-lg-8">
+		<p>#sex</p>
 	</div>
 </div>
 
