--- a/src/main/resources/static/day-summary.html
+++ b/src/main/resources/static/day-summary.html
@@ -8,7 +8,27 @@
     <h2 class="page-header">
         Bookings
     </h2>
+
+
+    #[collection: bookings]
+
+    #[pre]#[/pre]
+
+    #[each]
+
+    <ul class="list-group day-summary-list">
+        <b>#patient-name</b> is booked for <b>#therapy-name</b>
+        #HTMLOKAY:booking-sections-as-string
+    </ul>
+    #[/each]
+
+    #[post]#[/post]
+
+    #[empty]#[/empty]
+
+    #[/collection]
 </div>
+
 <div class="col-lg-12">
     <h2 class="page-header">
         Tracers
