Assigned staff member now showing - Thanks MARK :)

--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -64,12 +64,13 @@
 	</div>
 </div>
 
+
 <div class="row">
     <div class="col-md-4 col-lg-4 text-right">
-        <p><strong>Staff:</strong></p>
+        <p><strong>Assigned Staff:</strong></p>
     </div>
     <div class="col-md-8 col-lg-8">
-        <p>#staff-name</p>
+        <p>#HTMLOKAY:staff</p>
     </div>
 </div>
 
