New booking optional staff now. Table failed actions are in red.

--- a/src/main/resources/static/action-log.html
+++ b/src/main/resources/static/action-log.html
@@ -21,7 +21,7 @@
             #[pre]#[/pre]
 
             #[each]
-            <tr>
+            <tr class="#error">
                 <td>#staff</td>
                 <td>#when</td>
                 <td>#action</td>
