--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -10,7 +10,7 @@
 		<!-- keep in header! -->
 		<script src="/js/core/jquery.min.js"></script>
 
-		<title><div id=""></div>title</title>
+		<title>#title</title>
 		<link href="/css/core/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 		<link href="/css/core/sb-admin.css" rel="stylesheet" type="text/css"/>
 		<link href="/css/custom-tweaks.css" rel="stylesheet" type="text/css"/>
