now there the notes actually saves some staff :p

--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -166,10 +166,10 @@
 
     <div class="form-group">
         <div class="col-md-4 col-lg-4 text-right">
-            <label for="notesarea" class="control-label">Notes:</label>
+            <label for="notes" class="control-label">Notes:</label>
         </div>
         <div class="col-md-5 col-lg-5">
-            <textarea rows="7" class="form-control" name="notesarea" id="notesarea" style="resize: vertical;"></textarea>
+            <textarea rows="7" class="form-control" name="notes" id="notes" style="resize: vertical;"></textarea>
         </div>
     </div>
 
