--- a/src/main/resources/static/day-summary.html
+++ b/src/main/resources/static/day-summary.html
@@ -9,7 +9,6 @@
         Bookings
     </h2>
 
-
     #[collection: bookings]
 
     #[pre]#[/pre]
@@ -20,6 +19,7 @@
         <b>#patient-name</b> is booked for <b>#therapy-name</b>
         #HTMLOKAY:booking-sections-as-string
     </ul>
+
     #[/each]
 
     #[post]#[/post]
@@ -33,11 +33,41 @@
     <h2 class="page-header">
         Tracers
     </h2>
+
+    #[collection: unordered-tracers]
+
+    #[pre]#[/pre]
+
+    #[each]
+
+    <ul class="list-group day-summary-list">
+        <b>#tracer-name (#tracer-dose)</b> is required in <b>#days-until</b>
+    </ul>
+
+    #[/each]
+
+    #[post]#[/post]
+
+    #[empty]#[/empty]
+
+    #[/collection]
+
+    #[!if: unordered-tracers]
+    <p>There are no tracers to be ordered today or tomorrow.</p>
+    #[/!if]
+
 </div>
 <div class="col-lg-12">
     <h2 class="page-header">
         Absences
     </h2>
+
+    <ul class="list-group day-summary-list">
+        #HTMLOKAY:absences-as-string
+    </ul>
+    #[!if: absences-as-string]
+    <p>There are no staff absences registered for today or tomorrow.</p>
+    #[/!if]
 </div>
 
 
