Created a printer-friendly version of the day summary page

--- a/src/main/resources/static/_printable-day-summary-header.html
+++ b/src/main/resources/static/_printable-day-summary-header.html
@@ -13,6 +13,7 @@
     <link href="/css/core/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/core/sb-admin.css" rel="stylesheet" type="text/css"/>
     <link href="/css/custom-tweaks.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/printable-day-summary.css" rel="stylesheet" type="text/css"/>
     <link href="/css/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="/css/tables-styling.css" rel="stylesheet" type="text/css"/>
     #[if: calendar]
@@ -34,4 +35,3 @@
     <![endif]-->
 
 </head>
-<body>
