--- a/src/main/resources/static/day-summary.html
+++ b/src/main/resources/static/day-summary.html
@@ -1,11 +1,13 @@
 #[def: title = Day Summary]
 #[def: current-page = bookings]
-#[def: calendar = yes]
 
 ##_header.html
 
 <div class="col-lg-12">
     <h2 class="page-header">
+        <span style="float:right">
+            <a href="/printable-day-summary" target="_blank"><button class="btn btn-default"><i class="fa fa-print"></i> Printer-Friendly</button></a>
+        </span>
         Bookings
     </h2>
 
