Filter modal for cameras

--- a/src/main/resources/static/bookings.html
+++ b/src/main/resources/static/bookings.html
@@ -4,9 +4,7 @@
 
 ##_header.html
 
-<div class="row">
-	<div class="col-md-12 col-lg-12 calendar"></div>
-</div>
+##calendar.html
 
 <script src="/js/core/jquery-ui.min.js"></script>
 <script src="/js/plugins/fullcalendar/fullcalendar.min.js"></script>
