--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -104,7 +104,7 @@
 		</button>
 	</div>
 
-	<div hidden class="col-md-12 col-lg-12 calendar"></div>
+	##calendar.html
 </div>
 
 <div class="modal hide fade time-modal" data-backdrop="static" data-keyboard="false">
