Camera filtering implemented

--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -19,7 +19,7 @@
 							#[empty]<p><em>You have no cameras!</em></p>#[/empty]
 
 							#[each]
-							<input type="checkbox" class="selected-cameras" value="#id" id="selected-camera-#id"/> <label style="font-weight: normal;" for="selected-camera-#id">#camera-type-label, #room-number</label><br />
+							<input type="checkbox" class="selected-cameras" value="#id" id="selected-camera-#id" checked/> <label style="font-weight: normal;" for="selected-camera-#id">#camera-type-label, #room-number</label><br />
 							#[/each]
 
 							#[post]#[/post]
