Removed printer-friendly page because if I try to open the printer prompt ITS ALREADY PRINTER-FRIENDLY. WHY DIDN'T I TRY THIS EARLIER. TL;DR Life is just a series of trolls.

--- a/src/main/resources/static/day-summary.html
+++ b/src/main/resources/static/day-summary.html
@@ -6,7 +6,7 @@
 <div class="col-lg-12">
     <h2 class="page-header">
         <span style="float:right">
-            <a href="/printable-day-summary" target="_blank"><button class="btn btn-default"><i class="fa fa-print"></i> Printer-Friendly</button></a>
+            <a onclick="window.print()"><button class="btn btn-default"><i class="fa fa-print"></i> Printer-Friendly</button></a>
         </span>
         Bookings
     </h2>
