change label name from Select All to Select/Deselect All

--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -81,7 +81,7 @@
                         <div class="col-sm-9 container" style = "margin-top: 8px;">
                             <div style = "margin-bottom: 12px;">
                                 <input type="checkbox" class="select-all" id="select-all"/>
-                                <label id="select-all-label" for="select-all">Select All</label><br/>
+                                <label id="select-all-label" for="select-all">Select/Deselect All</label><br/>
                             </div>
                             #[collection: permissions]
 
