--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -74,7 +74,10 @@
 			<div class="modal-body">
 				<form class="import-form">
 					<div class="form-group">
-						<p>lol</p>
+						<p>Paste a CSV document of the following format:</p>
+						<pre>"name","hospital-number","nhs-number","date-of-birth","sex"</pre>
+						<p>For example:</p>
+						<pre>"Sarah Walker","BUYM0R3","N3RDH3RD","1982-07-30","Female"</pre>
 					</div>
 				</form>
 			</div>
