--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -78,6 +78,7 @@
 						<pre>"name","hospital-number","nhs-number","date-of-birth","sex"</pre>
 						<p>For example:</p>
 						<pre>"Sarah Walker","BUYM0R3","N3RDH3RD","1982-07-30","Female"</pre>
+						<textarea class="form-control" type="text" name="csv-data" rows="10"></textarea>
 					</div>
 				</form>
 			</div>
