--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -73,6 +73,7 @@
 			</div>
 			<div class="modal-body">
 				<form class="import-form">
+					<input type="hidden" name="table" value="patients">
 					<div class="form-group">
 						<p>Paste a CSV document of the following format:</p>
 						<pre>"name","hospital-number","nhs-number","date-of-birth","sex"</pre>
@@ -84,7 +85,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-cancel">Cancel</button>
-				<button type="button" class="btn btn-primary btn-okay">Import</button>
+				<button type="button" class="btn btn-primary btn-save">Import</button>
 			</div>
 		</div>
 	</div>
