Add modal for result

--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -91,6 +91,22 @@
 	</div>
 </div>
 
+<div class="modal hide fade result-modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3>Import result</h3>
+			</div>
+			<div class="modal-body">
+				<p id="result-text"></p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-primary btn-okay">OK</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <script src="/js/patients.js"></script>
 <script src="/js/plugins/date-time-selector/date-selector.js"></script>
 
