add permissions to patients html

--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -11,9 +11,11 @@
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Patient
 			</button>
 			#[/!ifperm]
+			#[ifperm: EXPORT_PATIENTS]
 			<button class="btn btn-default top-button link-button" data-target="/export/patients.csv"><i class="fa fa-download"></i>&nbsp;&nbsp;Export Patients
 			</button>
-			#[ifperm: EDIT_PATIENTS]
+			#[/!ifperm]
+			#[ifperm: IMPORT_PATIENTS]
 			<button class="btn btn-default top-button import-button"><i class="fa fa-database"></i>&nbsp;&nbsp;Import Patients
 			</button>
 			#[/!ifperm]
