Slight CSS changes

--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -97,11 +97,12 @@
 				<span class="therapy-selected"></span>
 				<a class="small" id="go-back-to-select-therapy">[Change]</a>
 			</div>
+			<div class="col-sm-4 text-right">
+				<button class="btn btn-primary" id="view-available-bookings">
+					View Available Bookings Slots
+				</button>
+			</div>
 		</div>
-		<br/>
-		<button style="margin-top: 15px;" class="btn btn-primary" id="view-available-bookings">
-			View Available Bookings Slots
-		</button>
 	</div>
 
 	##calendar.html
