Added advice note during booking

--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -11,6 +11,8 @@
 				<tr>
 					<th class="text-center">Patient Name</th>
 					<th class="text-center">Hospital Number</th>
+					<th class="text-center">NHS Number</th>
+					<th class="text-center">Sex</th>
 					<th class="text-center">Date of birth</th>
 					<th class="text-center">Action</th>
 				</tr>
@@ -24,6 +26,8 @@
 				<tr>
 					<td>#name</td>
 					<td>#hospital-number</td>
+					<td>#nhs-number</td>
+					<td>#sex</td>
 					<td>#date-of-birth</td>
 					<td>
 						<button class="btn select-patient" data-id="#id" data-name="#name">Select #name</button>
@@ -72,7 +76,7 @@
 					<td>#tracer-dose</td>
 					<td>#HTMLOKAY:camera-type-summary</td>
 					<td>
-						<button class="btn select-therapy" data-id="#id" data-name="#name">Select</button>
+						<button class="btn select-therapy" data-id="#id" data-name="#name" data-advice="#advice">Select</button>
 					</td>
 				</tr>
 				#[/each]
