--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -30,7 +30,7 @@
 					<td>#sex</td>
 					<td>#date-of-birth</td>
 					<td>
-						<button class="btn select-patient" data-id="#id" data-name="#name">Select #name</button>
+						<button class="btn select-patient confirm-button" data-id="#id" data-name="#name"><i class="fa fa-fw fa-arrow-circle-right"></i> Select</button>
 					</td>
 				</tr>
 				#[/each]
@@ -76,7 +76,7 @@
 					<td>#tracer-dose</td>
 					<td>#HTMLOKAY:camera-type-summary</td>
 					<td>
-						<button class="btn select-therapy" data-id="#id" data-name="#name" data-advice="#advice">Select</button>
+						<button class="btn select-therapy confirm-button" data-id="#id" data-name="#name" data-advice="#advice"><i class="fa fa-fw fa-arrow-circle-right"></i> Select</button>
 					</td>
 				</tr>
 				#[/each]
